# phasebatch

./: .gitattributes  .gitignore  README.md  codex_phase_ordering_mvp_tasks.md  pyproject.toml
benchmarks/tiny/: arithmetic.c  branch.c  loop.c  memory.c  select.c
configs/: cleanup_passes_v4.yaml  core_passes.yaml  core_passes_v1.yaml  ipo_inline_v4.yaml  loop_passes_v4.yaml  middleend_passes_v3.yaml  scalar_passes_v2.yaml  staged_salsa20_v5.yaml  staged_salsa20_v5_smoke.yaml  vector_cleanup_passes_v5.yaml
docs/: code_file_roles.md  pass_sets.md  phase_ordering_deep_review_blindspots.md  phase_ordering_search_space_compression_talk.md  phasebatch_project_logic_zh.md  project_status.md
docs/superpowers/plans/: 2026-07-10-advisor-data-report-zh.md  2026-07-10-in-process-llvm-worker.md  2026-07-10-mainline-pruning.md  2026-07-10-staged-runtime-optimization.md  2026-07-10-validation-performance.md  2026-07-11-rolling-exact-mainline.md
experiments/advisor_pair_scale_2n_20260719/merge_helper/: CMakeLists.txt  phasebatch_2n_merge.cpp
phasebatch/: __init__.py  advisor_benchmarks.py  advisor_figures.py  advisor_markdown.py  advisor_metrics.py  advisor_report.py  artifact_cleanup.py  baselines.py  batch_correctness.py  batch_explorer.py  batch_objective.py  batch_validation_dag.py  batch_validation_ladder.py  batcher.py  budgeted_sensitivity.py  case_studies.py  cli.py  component_summary.py  config.py  core_v1_budgeted_study.py  core_v1_case_study.py  coverage.py  dag_visualizer.py  equality_summary.py  evidence_pack.py  exact_reduction_study.py  exact_reference.py  explorer.py  final_summary.py  footprint.py  graph.py  ir_equivalence.py  ir_parser.py  mainline.py  mainline_summary.py  method_comparison.py  normalizer.py  opt_backend.py  opt_worker.py  optimizer.py  (+28 more)
scripts/: build_worker.ps1  run_mvp.sh  run_smoke.sh  verify_step1_optimize_batches.py
tests/: test_advisor_benchmarks.py  test_advisor_figures.py  test_advisor_markdown.py  test_advisor_metrics.py  test_advisor_report.py  test_architecture_imports.py  test_artifact_cleanup.py  test_baselines.py  test_batch_correctness.py  test_batch_explorer.py  test_batch_objective.py  test_batch_validation_dag.py  test_batch_validation_ladder.py  test_batcher.py  test_budgeted_sensitivity.py  test_case_studies.py  test_cli_bootstrap.py  test_cli_pipeline.py  test_component_summary.py  test_config.py  test_core_v1_budgeted_study.py  test_core_v1_case_study.py  test_coverage.py  test_dag_visualizer.py  test_equality_summary.py  test_evidence_pack.py  test_exact_reduction_study.py  test_exact_reference.py  test_explorer.py  test_final_summary.py  test_footprint.py  test_graph.py  test_ir_equivalence.py  test_ir_parser.py  test_mainline.py  test_mainline_summary.py  test_method_comparison.py  test_normalizer.py  test_opt_backend.py  test_opt_worker.py  (+29 more)
worker/: CMakeLists.txt  phasebatch_worker.cpp
(+66 files in other folders)
